--- a/inflight/src/main/resources/application.properties
+++ b/inflight/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=inflight
-server.port=8082
+server.port=9002
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.driver=oracle.jdbc.driver.OracleDriver
 spring.datasource.username=system
-spring.datasource.password=Oracle@2022
+spring.datasource.password=orcl
