--- a/authservice/src/main/resources/application.properties
+++ b/authservice/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=orcl
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
