--- a/inflight/src/main/resources/application.properties
+++ b/inflight/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=inflight
 server.port=9002
+
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.driver=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=system
 spring.datasource.password=orcl
+
+# Optional: show SQL queries in console
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
